# bliksemcheck

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  _date.c  _date.h  _get_opt.c  _get_opt.h  _rtreearr.c  _rtreearr.h  _stdtype.h  autogen.sh  bliksemcheck.c  bliksemcheck.h  configure.ac  gen_dataval_report.py
